argoCD/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ayano-site
spec:
  selector:
    matchLabels:
      app: ayano-site
  replicas: 3
  template:
    metadata:
      labels:
        app: ayano-site
    spec:
      imagePullSecrets:
        - name: internal-harbor
      containers:
        - name: app
          image: registry.uniproject.jp/ayane/ayano-site:1.1.4
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: default-port
