argoCD/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  labels:
    name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: ayano.ayane0857.net
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ayano-site
                port:
                  number: 80
