argoCD/next.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ayano-site
spec:
  selector:
    matchLabels:
      app: ayano-site
  replicas: 3
  template:
    metadata:
      labels:
        app: ayano-site
    spec:
      containers:
        - name: app
          image: registry.uniproject.jp/ayane/ayano-site:0.1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: default-port
---
apiVersion: v1
kind: Service
metadata:
  name: ayano-site
spec:
  selector:
    app: ayano-site
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  labels:
    name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: ayano.ayane0857.net
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ayano-site
                port:
                  number: 80
